--- a/frontend/app/src/static/app/user/userDetails.html
+++ b/frontend/app/src/static/app/user/userDetails.html
@@ -60,6 +60,16 @@
         <span class="text-field--label">since</span>
       </div>
     </div>
+    <div class="group-mixed text-field">
+      <div class="group-mixed--middle">
+        <span class="text-field--title enable-text-selection">
+          {{::getInboxEmailAddress()}}
+        </span>
+      </div>
+      <div class="group-mixed--right">
+        <span class="text-field--label">inbox</span>
+      </div>
+    </div>
     <p class="row">
       <span class="text-heading-primary">danger zone</span><br/>
     </p>
