--- a/frontend/app/src/static/app/root/root.html
+++ b/frontend/app/src/static/app/root/root.html
@@ -2,9 +2,8 @@
   <div class="container-root--inner" ng-view
     ng-class="{'height-small': smallDeviceHeight, 'width-small': smallDeviceWidth}"></div>
 
-  <div ng-if="modal.visible" class="container-modal animate-modal" modal="modal.params"
-    modal-close="hideModal()" modal-reinit="{register: registerModalReinit, unregister: unregisterModalReinit}"
-    editable-field-container="auto" editable-field-container-blur
-    editable-field-container-clicked-elsewhere="!modal.params.cancelDisabled && hideModal()">
+  <div ng-if="modal.visible" class="container-modal--outer animate-modal"
+    modal="modal.params" modal-close="hideModal()"
+    modal-reinit="{register: registerModalReinit, unregister: unregisterModalReinit}">
   </div>
 </div>
