--- a/frontend/app/src/static/app/root/root.html
+++ b/frontend/app/src/static/app/root/root.html
@@ -1,6 +1,9 @@
 <div class="container-root" editable-field-backdrop>
   <div class="container-root--inner" ng-view
-    ng-class="{'height-small': smallDeviceHeight, 'width-small': smallDeviceWidth}"></div>
+    ng-class="{'height-small': smallDeviceHeight,
+               'width-small': smallDeviceWidth,
+               'twelve-hour-time': is12HourTime()}">
+   </div>
 
   <div ng-if="modal.visible" class="container-modal--outer animate-modal"
     modal="modal.params" modal-close="hideModal()"
