Tweaked setting text

--- a/frontend/app/src/static/app/main/settings.html
+++ b/frontend/app/src/static/app/main/settings.html
@@ -116,7 +116,7 @@
           icon-checkbox="'hour12'" ng-click="settingsCheckboxClicked('hour12')"/>
       </div>
       <div class="group-mixed--middle">
-        <span class="text-link">use a 12-hour time</span>
+        <span class="text-link">use 12-hour time format</span>
       </div>
     </div>
 
