--- a/frontend/app/src/index_devel.html
+++ b/frontend/app/src/index_devel.html
@@ -80,6 +80,7 @@
   <script src="static/app/base/DrawerService.js"></script>
   <script src="static/app/base/ExtendedItemService.js"></script>
   <script src="static/app/base/ItemLikeService.js"></script>
+  <script src="static/app/base/PlatformService.js"></script>
   <script src="static/app/base/SwiperService.js"></script>
   <script src="static/app/base/swiperClickDirective.js"></script>
   <script src="static/app/base/TagEditorController.js"></script>
