--- a/frontend/app/src/static/app/entry/entryHome.html
+++ b/frontend/app/src/static/app/entry/entryHome.html
@@ -18,7 +18,7 @@
           </div>
           <div id="em-animation-0">
             <span class="icon-logo-text" ng-init="notifyAnimationReady('logo')"></span><br/><br/>
-            <span ng-init="notifyAnimationReady('slogan')">task and note organizer that keeps you zen</span>
+            <span ng-init="notifyAnimationReady('slogan')">minimal task and note organizer</span>
           </div>
           <div id="em-animation-1" class="hide">
             <span>what if you never had to forget anything again?</span>
