--- a/frontend/app/src/static/app/main/inbox.html
+++ b/frontend/app/src/static/app/main/inbox.html
@@ -13,11 +13,9 @@
             placeholder="add item&#8230;" maxlength="128">
           </textarea>
         </div>
-        <div class="group-mixed--right">
-          <a href editable-field-deactivate swiper-click="openEditor('item', newItem)">
-            <span class="text-navigation-forward without-text"></span>
-          </a>
-        </div>
+        <a href class="group-mixed--right" editable-field-deactivate swiper-click="openEditor('item', newItem)">
+          <span class="text-navigation-forward without-text"></span>
+        </a>
       </form>
     </div>
 
