--- a/frontend/app/src/static/app/tasks/tasksContexts.html
+++ b/frontend/app/src/static/app/tasks/tasksContexts.html
@@ -39,11 +39,9 @@
       <a href class="group-mixed--middle link" swiper-click="swipeToContext()">
         <span class="text-link">no context</span>
       </a>
-      <div class="group-mixed--right">
-        <a href swiper-click="swipeToContext()">
-          <span class="text-navigation-forward large"></span>
-        </a>
-      </div>
+      <a class="group-mixed--right" href swiper-click="swipeToContext()">
+        <span class="text-navigation-forward large"></span>
+      </a>
     </div>
   </section>
 
