--- a/frontend/app/src/static/app/tasks/taskListItemAdd.html
+++ b/frontend/app/src/static/app/tasks/taskListItemAdd.html
@@ -13,12 +13,10 @@
       placeholder="add task&#8230;" maxlength="128">
     </textarea>
   </div>
-  <div class="group-mixed--right">
-    <a href class="link-navigation" ng-hide="isTutorialInProgress()" editable-field-deactivate
-      swiper-click="openTaskEditor(newItem)">
-      <span class="text-navigation-forward without-text"></span>
-    </a>
-  </div>
+  <a href class="group-mixed--right link-navigation" ng-hide="isTutorialInProgress()" editable-field-deactivate
+    swiper-click="openTaskEditor(newItem)">
+    <span class="text-navigation-forward without-text"></span>
+  </a>
 </form>
 
 <!-- ONBOARDING -->
