--- a/frontend/app/src/static/app/user/userHome.html
+++ b/frontend/app/src/static/app/user/userHome.html
@@ -139,8 +139,16 @@
         <span class="highlighted">mind</span>
       </h2>
       <div class="textgroup-ingress row">your information is stored only locally</div>
-      <div class="textgroup-ingress last row">protect your data by signing up for an
-      <span class="text-highlighted">extended mind</span> account</div>
+      <div class="textgroup-ingress last row">protect your data by signing up for a new
+        <span class="text-highlighted">extended mind</span> account
+      </div>
+      <div class="row">
+        <span class="text-details">..or </span>
+        <a href ng-click="openEditor('user', undefined, 'logIn')" class="highlighted link-inline">
+          <span class="text-details">log in</span>
+        </a>
+        <span class="text-details">to your existing account</span>
+      </div>
     </div>
   </section>
 
