--- a/frontend/app/src/static/app/focus/focusTasks.html
+++ b/frontend/app/src/static/app/focus/focusTasks.html
@@ -325,7 +325,7 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/rightDuplicate" slide-index="0"
         swiper-slide-duplicate="true">
-          <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'"
+          <div class="container-content" ng-class="{'with-agenda': isAgendaVisible(), 'past-date': daySlides[2].pastDate}"
             list="getTasksArray('date', {date: daySlides[2].info, pastDate: daySlides[2].pastDate})"
             list-options="{hideItemDefault: true, isBounded: isAgendaVisible,
             registerModeChanged: registerAgendaVisibilityChangedCallback,
@@ -376,7 +376,7 @@
         </div>
 
         <div class="swiper-slide" swiper-slide="focus/tasks/left" slide-index="1" swiper-slide-loop-start="true">
-          <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'"
+          <div class="container-content" ng-class="{'with-agenda': isAgendaVisible(), 'past-date': daySlides[0].pastDate}"
             list="getTasksArray('date', {date: daySlides[0].info, pastDate: daySlides[0].pastDate})"
             list-options="{hideItemDefault: true, isBounded: isAgendaVisible,
             registerModeChanged: registerAgendaVisibilityChangedCallback,
@@ -427,7 +427,7 @@
         </div>
 
         <div class="swiper-slide" swiper-slide="focus/tasks/middle" slide-index="2">
-          <div class="container-content" ng-class="daySlides[1].pastDate && 'past-date'"
+          <div class="container-content" ng-class="{'with-agenda': isAgendaVisible(), 'past-date': daySlides[1].pastDate}"
             list="getTasksArray('date', {date: daySlides[1].info, pastDate: daySlides[1].pastDate})"
             list-options="{hideItemDefault: true, isBounded: isAgendaVisible,
             registerModeChanged: registerAgendaVisibilityChangedCallback,
@@ -478,7 +478,7 @@
         </div>
 
         <div class="swiper-slide" swiper-slide="focus/tasks/right" slide-index="3">
-          <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'"
+          <div class="container-content" ng-class="{'with-agenda': isAgendaVisible(), 'past-date': daySlides[2].pastDate}"
             list="getTasksArray('date', {date: daySlides[2].info, pastDate: daySlides[2].pastDate})"
             list-options="{hideItemDefault: true, isBounded: isAgendaVisible,
             registerModeChanged: registerAgendaVisibilityChangedCallback,
@@ -529,7 +529,7 @@
         </div>
 
         <div class="swiper-slide" swiper-slide="focus/tasks/leftDuplicate" slide-index="4" swiper-slide-duplicate="true">
-          <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'"
+          <div class="container-content" ng-class="{'with-agenda': isAgendaVisible(), 'past-date': daySlides[0].pastDate}"
             list="getTasksArray('date', {date: daySlides[0].info, pastDate: daySlides[0].pastDate})"
             list-options="{hideItemDefault: true, isBounded: isAgendaVisible,
             registerModeChanged: registerAgendaVisibilityChangedCallback,
