--- a/frontend/app/src/static/app/tasks/taskEditor.html
+++ b/frontend/app/src/static/app/tasks/taskEditor.html
@@ -279,6 +279,38 @@
             </div>
           </div>
 
+          <!-- CONTEXT -->
+          <div ng-show="showTaskProperty('context')" class="group-mixed">
+            <a href class="group-mixed--middle link-search-result"
+              ng-class="!task.trans.context && 'downplayed'" swiper-click="openContextPicker()">
+              <span class="text-field--title"
+                ng-bind="(task.trans.context && !task.trans.context.trans.deleted) ? '@' + task.trans.context.trans.title : 'select context\u2026'">
+              </span>
+            </a>
+            <div ng-if="task.trans.context" class="group-mixed--right">
+              <span class="text-field--label">context</span>
+            </div>
+          </div>
+
+          <!-- CONTEXT PICKER -->
+          <div ng-if="showTaskSubEditor('context')"
+            class="container-sub-editor swiper-no-swiping animate-fade-in"
+            editable-field-container="auto" editable-field-container-scrollable="true"
+            editable-field-container-clicked-elsewhere="closeContextPicker()" data-snap-ignore="true">
+            <div list-picker="getTagsArray('contexts', {owner: task.trans.owner})"
+              list-picker-new-item="getNewContext()"
+              list-picker-save="closeContextPickerAndSetContextToTask(task, list)"
+              list-picker-close="closeListPicker()"
+              list-picker-clear="closeContextPickerAndClearContextFromTask(task, list)"
+              list-picker-get-selected="task.trans.context" list-picker-type="context"
+              list-picker-prefix="@"
+              list-picker-register-save-new-list-callback="registerSubEditorDoneCallback(saveNewList)"
+              list-picker-unregister-save-new-list-callback="unregisterSubEditorDoneCallback()"
+              list-picker-register-is-edited-callback="registerHasSubEditorEditedCallback(isEdited)"
+              list-picker-unregister-is-edited-callback="unregisterHasSubEditorEditedCallback()">
+            </div>
+          </div>
+
           <!-- DESCRIPTION -->
           <textarea ng-if="drawerAisleInitialized && showEditorProperty('description')" id="ignoreSnap"
             ng-model="task.trans.description" input-model-validator ng-trim="false" msd-elastic
@@ -312,40 +344,9 @@
         ng-init="slideInfo = {footerId: 'advancedFooter'}">
         <div class="container-content" ng-style="{'padding-bottom': slideInfo.footerHeight}">
 
-          <!-- CONTEXT -->
-          <div ng-show="showTaskProperty('context')" class="group-mixed row-top-parent">
-            <a href class="group-mixed--middle link-search-result"
-              ng-class="!task.trans.context && 'downplayed'" swiper-click="openContextPicker()">
-              <span class="text-field--title"
-                ng-bind="(task.trans.context && !task.trans.context.trans.deleted) ? '@' + task.trans.context.trans.title : 'select context\u2026'">
-              </span>
-            </a>
-            <div ng-if="task.trans.context" class="group-mixed--right">
-              <span class="text-field--label">context</span>
-            </div>
-          </div>
-
-          <!-- CONTEXT PICKER -->
-          <div ng-if="showTaskSubEditor('context')"
-            class="container-sub-editor swiper-no-swiping animate-fade-in"
-            editable-field-container="auto" editable-field-container-scrollable="true"
-            editable-field-container-clicked-elsewhere="closeContextPicker()" data-snap-ignore="true">
-            <div list-picker="getTagsArray('contexts', {owner: task.trans.owner})"
-              list-picker-new-item="getNewContext()"
-              list-picker-save="closeContextPickerAndSetContextToTask(task, list)"
-              list-picker-close="closeListPicker()"
-              list-picker-clear="closeContextPickerAndClearContextFromTask(task, list)"
-              list-picker-get-selected="task.trans.context" list-picker-type="context"
-              list-picker-prefix="@"
-              list-picker-register-save-new-list-callback="registerSubEditorDoneCallback(saveNewList)"
-              list-picker-unregister-save-new-list-callback="unregisterSubEditorDoneCallback()"
-              list-picker-register-is-edited-callback="registerHasSubEditorEditedCallback(isEdited)"
-              list-picker-unregister-is-edited-callback="unregisterHasSubEditorEditedCallback()">
-            </div>
-          </div>
 
           <!-- REPEATING -->
-          <div ng-if="showTaskProperty('repeating')" class="group-mixed">
+          <div ng-if="showTaskProperty('repeating')" class="group-mixed row-top-parent">
             <a href class="group-mixed--middle link-search-result"
               ng-class="!task.trans.repeating && 'downplayed'" swiper-click="openRepeatingPicker()">
               <span class="text-field--title"
